--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 @import http://fonts.googleapis.com/css?family=Open+Sans;
 
-/*
-  Created: November 8, 2014
-*/
 ul {
     list-style-type:none
 }
@@ -20,16 +17,13 @@ li {
 
 /* Style the navigation bar links.  */
 #navbar a {
-    font-family:'Open Sans',sans-serif;
-    font-size:1.5em;
-    margin:0 10px;
+    font-family:fantasy;
+    font-size:2.0em;
     padding:0 8px;
-    color:#000;
+    color:floralwhite;
     text-decoration:none;
-    background-color:#FF5050;
-    border:2px solid;
-    border-color:#fff;
-    border-radius:20px
+    background-color:mediumpurple;
+    border-radius:10px
 }
 
 /* Give the user an affordance that each link is clickable. */
