--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 @import http://fonts.googleapis.com/css?family=Open+Sans;
 
-ul {
-    list-style-type:none
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 70%;
 }
 
 /* The list will disply inline.*/
